# flask-easteregg

./: Dockerfile  README.md  pyproject.toml
src/: easter_egg.py
src/static/: ascii-art.txt
src/templates/: index.html
